--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/tunadcdx.github.io/DijiReact",
+  "homepage": "https://tunadcdx.github.io/DijiReact",
   "name": "dijicase",
   "version": "0.1.0",
   "private": true,
